Sidebar submenus title wrapping fixed

--- a/niudot-app/src/styles/sidebar.css
+++ b/niudot-app/src/styles/sidebar.css
@@ -301,8 +301,8 @@
 
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item > .pro-item-content {
 	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
+	text-overflow: '-';
+	white-space: normal;
 }
 
 .pro-sidebar .pro-menu {
